force-app/main/default/objects/BestTimeToCall__x/BestTimeToCall__x.object-meta.xml
<CustomObject>
    <externalDataSource>BestTimeToCall</externalDataSource>
    <externalName>BestTimeToCall_R4Demo</externalName>
    <label>BestTimeToCall</label>
    <pluralLabel>BestTimeToCalls</pluralLabel>
</CustomObject>