force-app/main/default/objects/BestTimeToCall__x/fields/Afternoon__c.field-meta.xml
<CustomField>
    <fullName>Afternoon__c</fullName>
    <label>Afternoon</label>
    <length>10</length>
    <type>Text</type>
</CustomField>