force-app/main/default/objects/BestTimeToCall__x/fields/DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeek__c</fullName>
    <label>DayOfWeek</label>
    <length>10</length>
    <type>Text</type>
</CustomField>