force-app/main/default/objects/BestTimeToCall__x/fields/Early__c.field-meta.xml
<CustomField>
    <fullName>Early__c</fullName>
    <label>Early</label>
    <length>10</length>
    <type>Text</type>
</CustomField>