force-app/main/default/objects/BestTimeToCall__x/fields/Evening__c.field-meta.xml
<CustomField>
    <fullName>Evening__c</fullName>
    <label>Evening</label>
    <length>10</length>
    <type>Text</type>
</CustomField>