force-app/main/default/objects/BestTimeToCall__x/fields/IssueType__c.field-meta.xml
<CustomField>
    <fullName>IssueType__c</fullName>
    <label>IssueType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>