force-app/main/default/objects/BestTimeToCall__x/fields/Midnight__c.field-meta.xml
<CustomField>
    <fullName>Midnight__c</fullName>
    <label>Midnight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>