force-app/main/default/objects/BestTimeToCall__x/fields/Morning__c.field-meta.xml
<CustomField>
    <fullName>Morning__c</fullName>
    <label>Morning</label>
    <length>10</length>
    <type>Text</type>
</CustomField>